--- a/templates/env.j2
+++ b/templates/env.j2
@@ -29,3 +29,6 @@ MEM_LIMIT=1073741824
 
 # Project namespace (defaults to the current folder name if not set)
 #COMPOSE_PROJECT_NAME=myproject
+
+# - ES_JAVA_OPTS=${ES_JAVA_OPTS}
+ES_JAVA_OPTS=-Xms750m -Xmx750m
