--- a/templates/env.j2
+++ b/templates/env.j2
@@ -31,4 +31,4 @@ MEM_LIMIT=1073741824
 #COMPOSE_PROJECT_NAME=myproject
 
 # - ES_JAVA_OPTS=${ES_JAVA_OPTS}
-ES_JAVA_OPTS=-Xms750m -Xmx750m
+ES_JAVA_OPTS={{ ES_JAVA_OPTS }}
